[package]
name = "actix-web"
version = "0.1.0"
authors = ["Usman Haider <uhaider.bese15seecs@seecs.edu.pk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
bytes = "0.4.12"
env_logger = "0.6.2"
futures = "0.1.29"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
serde = "1.0.101"
serde_json = "1.0.40"
serde_derive = "1.0.101"
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
r2d2 = "0.8.5"
dotenv = "0.14.1"




